# bkw-tariff-proxy

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  RUNBOOK.md  manifest.yaml  pyproject.toml
.github/workflows/: ci.yml
data/loxone/: README.md  bkw-tariff-proxy-example.Loxone  bkw-tariff-proxy.xml
docs/: bkw-api-observations.md  go-live-and-naming-plan.md  loxone-endpoints.md  portainer-test-deployment.md
examples/: docker-compose.yml  portainer-production-stack.template.yml  portainer-test-stack.yml
scripts/: live_cutover_portainer.py
src/bkw_tariff_proxy/: __init__.py  config.py  main.py  normalizer.py  service.py
tests/: test_app.py  test_normalizer.py  test_publication_assets.py  test_service.py
