[project]
name = "bkw-tariff-proxy"
version = "0.1.0"
description = "Docker HTTP proxy for BKW dynamic feed-in tariffs and Loxone virtual HTTP inputs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
